# llm_app_example

./: .env.example  .gitignore  DOCKER.md  README.md  database_plan.txt  docker-compose.yml  pyproject.toml  pytest.ini  road_map.txt
backend/: Dockerfile  app.py  requirements.txt  terminal_chat.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  chat.py  session.py
backend/app/core/: __init__.py  config.py  dependencies.py  security.py  types.py
backend/app/crud/: __init__.py  history_crud.py  session_crud.py  user_crud.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  chat.py  history.py  session.py  user.py
backend/app/schemas/: __init__.py  session.py  token.py  user.py
backend/app/services/: chat_service.py  history_service.py
backend/app/utils/: __init__.py  file_storage.py  ollama_client.py  security.py
backend/tests/: conftest.py
backend/tests/api/: test_chat_api.py
backend/tests/fixtures/: mock_qa_pairs.json
backend/tests/fixtures/test_json_sessions/api_tests/: 20250426_173707_971341_1d5658a1-a841-4cd8-b42e-aca4350a5032.json  20250426_173709_860872_27cb077f-2f00-4848-9369-d67979bb35c5.json
backend/tests/fixtures/test_json_sessions/mock_tests/: test_mock_llm_output.json
backend/tests/mocks/: mock_llm.py  test_mock_llm.py
backend/tests/services/: test_chat_service.py
